Fixed the drawing problem on browser and tablets
Fixed the share button not showing on some mobile devices

--- a/www/css/index.scss
+++ b/www/css/index.scss
@@ -29,6 +29,7 @@ html, body, section {
 @mixin numbersSprite ($posX:0px, $posY:0px, $width:48px, $height:48px) { 
         background: url('../img/numbers_sprite.png') no-repeat; 
         background-position: $posX $posY;
+	display: inline-block;
         width: $width;
         height: $height;
     }
@@ -73,19 +74,15 @@ ul.actions {
     left: 0%; right: 0%; bottom: 0;
     width: 100%; height: 120px;
     margin:auto;
-    @extend .display-flex;
     color: $color-rojo-light;
     li{
         @extend .display-flex;
         width:33%; 
         height: 100%;
         cursor:pointer;
-        @extend .debug;
     }
     li:first-child{float: left; }
     li:last-child{float: right; }
-    @extend .debug;
-
 }
 
 #game {
